# shadowcrypt

./: README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
runner/: cy_loader.pyx
shadowcrypt/: cli.py
shadowseal.egg-info/: PKG-INFO  SOURCES.txt
